# ai-flags

./: BUGS_FOUND.md  README.md  justfile  pyproject.toml
src/ai_flags/: __init__.py  cli.py  config.py  config_loader.py  executor.py  output.py  parser.py  validator.py
src/ai_flags/handlers/: __init__.py  base.py  commit.py  debug.py  no_lint.py  subagent.py  test.py
tests/: test_cli.py  test_config.py  test_executor.py  test_output.py  test_parser.py  test_validator.py
tests/handlers/: test_base.py  test_commit.py  test_debug.py  test_no_lint.py  test_subagent.py  test_test.py
